syntax = "proto3";

package NAlice.NScenarios;

option go_package = "a.yandex-team.ru/alice/megamind/protos/scenarios";
option java_package = "ru.yandex.alice.megamind.protos.scenarios";
option java_outer_classname = "TypedCallbackRequestDataProto";

import "alice/megamind/protos/common/atm.proto";
import "alice/megamind/protos/common/origin.proto";
import "alice/megamind/protos/common/request_params.proto";

import "google/protobuf/any.proto";

import "mapreduce/yt/interface/protos/extension.proto";

message TTypedCallbackRequestData {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    google.protobuf.Any TypedCallback = 1 [json_name = "typed_callback", (NYT.column_name) = "typed_callback"];

    TAnalyticsTrackingModule Analytics = 2 [json_name = "analytics", (NYT.column_name) = "analytics"];
    TOrigin Origin = 3 [json_name = "origin", (NYT.column_name) = "origin"];
    TRequestParams RequestParams = 4 [json_name = "request_params", (NYT.column_name) = "request_params"];
}
